--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,8 +4,13 @@
     <title>Hello World!</title>
   </head>
   <body>
+    <div id="app"></div>
+
+    <!--
     <h1>Hello World!</h1>
     We are using io.js <script>document.write(process.version)</script>
     and Electron <script>document.write(process.versions['electron'])</script>.
+    -->
   </body>
+  <script src="/public/bundle.js"></script>
 </html>
