--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello World!</title>
+    <title>Shiver</title>
   </head>
   <body>
     <div id="app"></div>
-
-    <!--
-    <h1>Hello World!</h1>
-    We are using io.js <script>document.write(process.version)</script>
-    and Electron <script>document.write(process.versions['electron'])</script>.
-    -->
   </body>
   <script src="/public/bundle.js"></script>
 </html>
